--- a/rotor_navigation/package.xml
+++ b/rotor_navigation/package.xml
@@ -62,6 +62,7 @@
   <depend>mav_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>rotors_gazebo_plugins</depend>
+  <depend>tf</depend>
   <depend>sensor_msgs</depend>
   <depend>waypoint_navigator</depend>
   <depend>xacro</depend>
